- Apply perfume to all unit types & buildings with the specified name
  - Fixes perfume only applying to one sub-type when a unit type has multiple AI strategies
- Fix max_ai_naval_escorts setting interfering with group movement of naval units belonging to human players

* RELEASE 17 PREVIEW 3
- Civ and leader names can vary by era
- Option to stop AI from escorting units without the "requires escort" flag
- Exclude units from lethal ZoC when they're entering a tile after capturing an enemy unit
- Fix incorrect icons appearing for generated resources
- Fix a rare edge case where stack bombard would continue attacking an empty tile
- Option to hide icons for generation of non-bonus resources
- Fix possible freeze when a trade deal is broken for a resource that's an input to a resource generating building
- Allow list items to be placed on separate lines for perfume_specs and buildings_generating_resources

* RELEASE 17 PREVIEW 2
- Enable resource generating buildings to add the resource's yields to their city
- Display icons for generated resources on top of the generating building
- Option to allow airdrops without airports
- Can increase unit maintenance costs based on their build costs
- Adjustable AI worker requirement
- Option to pack the list of luxuries more tightly into the box on the city screen
- Fix freezes caused by undisembarkable escorting unit
  - Covered by the disembark immobile bug fix option, which has been renamed
- Improve turn timer
  - No longer count time spent on city screen
  - Fix possible double-counting of time spent on popups

* RELEASE 17 PREVIEW 1
- Optimize computation of trade networks
 - For details, see the info text file in the Trade Net X folder
- Option to measure turn times
- Zone of control changes
  - Allow land-to-sea and sea-to-land attacks, only using bombard stat
  - May be lethal
  - May be exerted by air units
  - Show attack animation even when attacker is not at the top of its stack
- Defensive bombard changes