@@ -491,6 +491,7 @@ define,	   0x55A240,	0x566150,	0x55A1F0,	"Leader_get_civ_noun",				"char * (__fa
 define,	   0x55A340,	0x566250,	0x55A2F0,	"Leader_get_civ_formal_name",			"char * (__fastcall *) (Leader * this)"
 define,	   0x55A2C0,	0x5661D0,	0x55A270,	"Leader_get_title",				"char * (__fastcall *) (Leader * this)"
 repl call, 0x593614,	0x5A0DAE,	0x593334,	"Leader_get_player_title_for_intro_popup",	""
+inlead,	   0x4A8240,	0x4AEF20,	0x4A82D0,	"Fighter_animate_start_of_combat",		"void (__fastcall *) (Fighter * this, int edx, Unit * attacker, Unit * defender)"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
